# hobbits

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  .releaserc.json  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE.txt  README.md  azure-pipelines.yml  conanfile.py  mkdocs.yml  package-lock.json  package.json  print_version.sh  uncrustify.cfg  uncrustify_wrapper.sh
src/: CMakeLists.txt  hobbits-qt-ui-forms.pro  hobbits.pro  qmake_version_args.sh  qmake_version_args_mac.sh
src/cmake/: FindPCAP.cmake  PackExternalDeps.cmake
src/hobbits-core/: CMakeLists.txt  abstractpluginrunner.cpp  abstractpluginrunner.h  actionprogress.cpp  actionprogress.h  actionrenderprogress.h  actionwatcher.h  analyzeractor.cpp  analyzeractor.h  analyzerinterface.h  analyzerresult.cpp  analyzerresult.h  analyzerrunner.cpp  analyzerrunner.h  batchrunner.cpp  batchrunner.h  bitarray.cpp  bitarray.h  bitcontainer.cpp  bitcontainer.h  bitcontainerlistmodel.cpp  bitcontainerlistmodel.h  bitcontainermanager.cpp  bitcontainermanager.h  bitcontainerpreview.cpp  bitcontainerpreview.h  bitcontainertreemodel.cpp  bitcontainertreemodel.h  bitinfo.cpp  bitinfo.h  config.h.in  displaybase.cpp  displaybase.h  displaybasetext.cpp  displaybasetext.h  displayhandle.cpp  displayhandle.h  displayhelper.cpp  displayhelper.h  displayinterface.h  (+82 more)
src/hobbits-gui/: CMakeLists.txt  Hobbits.desktop  batchcreationdialog.cpp  batchcreationdialog.h  batchcreationdialog.ui  batches.qrc  config.h.in  containerselectiondialog.cpp  containerselectiondialog.h  containerselectiondialog.ui  hobbits-gui.pro  hobbitsguiconfig.h  hobbitsguiconfig.h.in  hobbitsguiinfo.cpp  hobbitsguiinfo.h  hobbitsstyle.cpp  hobbitsstyle.h  icons.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  preferencesdialog.cpp  preferencesdialog.h  preferencesdialog.ui  style.qrc
src/hobbits-gui/batches/: byte_align.hbat
src/hobbits-gui/images/icons/: mahlet.bits
src/hobbits-gui/style/qss/: style.qss
src/hobbits-plugins/: CMakeLists.txt  hobbits-plugins.pro
src/hobbits-plugins/FrequencyPlot/: FrequencyPlot.pro  frequencyplot.cpp  frequencyplotcontrols.cpp  frequencyplotcontrols.h  frequencyplotcontrols.ui  frequencyplotwidget.cpp  frequencyplotwidget.h
src/hobbits-plugins/analyzers/: analyzers.pro
src/hobbits-plugins/analyzers/Find/: CMakeLists.txt  Find.pro  find.cpp  find.h  findform.cpp  findform.h  findform.ui
src/hobbits-plugins/analyzers/FindAnalyzer/: CMakeLists.txt  FindAnalyzer.pro  findanalyzer.cpp  findanalyzer.h  findanalyzer.ui  findanalyzer_global.h  icons.qrc
src/hobbits-plugins/analyzers/Highlight/: CMakeLists.txt  Highlight.pro  highlight.cpp  highlight.h  highlightform.cpp  highlightform.h  highlightform.ui
src/hobbits-plugins/analyzers/KaitaiStruct/: CMakeLists.txt  KaitaiStruct.pro  kaitaidata.qrc  kaitaiscripts.qrc  kaitaistruct.cpp  (+5 more)
src/hobbits-plugins/displays/: displays.pro
src/hobbits-plugins/importerexporters/: importerexporters.pro
src/hobbits-plugins/operators/: operators.pro
src/hobbits-python/: CMakeLists.txt  hobbits-python.pro  hobbits-python_global.h  hobbitspython.cpp  hobbitspython.h  hobbitspythonconfig.h  hobbitspythonconfig.h.in  imagebuffer.cpp  imagebuffer.h  py_actionprogress.cpp  py_actionprogress.h  py_bitarray.cpp  py_bitarray.h  py_bitcontainer.cpp  py_bitcontainer.h  py_bitinfo.cpp  py_bitinfo.h  py_displayhandle.cpp  py_displayhandle.h  py_hobbits.cpp  py_hobbits.h  python-link.pri  pythonanalyzer.cpp  pythonanalyzer.h  pythonarg.cpp  pythonarg.h  pythondisplay.cpp  pythondisplay.h  pythonexporter.cpp  pythonexporter.h  pythonimporter.cpp  pythonimporter.h  pythoninterpreter.cpp  pythoninterpreter.h  pythonoperator.cpp  pythonoperator.h  pythonpluginconfig.cpp  pythonpluginconfig.h  pythonrequest.cpp  pythonrequest.h  (+2 more)
src/hobbits-runner/: CMakeLists.txt  hobbits-runner.pro  hobbitsrunnerconfig.h  hobbitsrunnerconfig.h.in  hobbitsrunnerinfo.cpp  hobbitsrunnerinfo.h  main.cpp
src/hobbits-widgets/: CMakeLists.txt  abstractparametereditor.h  actionrenderprogress.cpp  actionrenderprogress.h  batchedititem.cpp  batchedititem.h  batchedititemwidget.cpp  batchedititemwidget.h  batchedititemwidget.ui  batcheditlink.cpp  batcheditlink.h  batcheditor.cpp  batcheditor.h  batcheditor.ui  batcheditscene.cpp  batcheditscene.h  batchinputdialog.cpp  batchinputdialog.h  batchinputdialog.ui  bitcontainerlistmodel.cpp  bitcontainerlistmodel.h  bitcontainermanagerui.cpp  bitcontainermanagerui.h  bitcontainertreemodel.cpp  bitcontainertreemodel.h  displaybase.cpp  displaybase.h  displaybasetext.cpp  displaybasetext.h  displayhandle.cpp  displayhandle.h  displayhelper.cpp  displayhelper.h  displayresult.cpp  displayresult.h  displaysplitter.cpp  displaysplitter.h  displaywidget.cpp  displaywidget.h  highlightnavigator.cpp  (+30 more)
wizards/: CMakeLists.txt  wizard_installer.bat  wizard_installer.sh
wizards/analyzer/: CMakeLists.txt.templ  formplugintemplate.ui  wizard.json
wizards/analyzerplugin/: analyzerplugintemplate.cpp  analyzerplugintemplate.h  analyzerplugintemplate.pro  formplugintemplate.h  wizard.json
wizards/display/: displaycontrols.cpp  displaycontrols.ui  displayplugintemplate.cpp  displaywidget.cpp  displaywidget.h  wizard.json
wizards/displayplugin/: displaycontrols.h  displayplugintemplate.cpp  displayplugintemplate.h  displayplugintemplate.pro  displaywidget.cpp  displaywidget.h  formplugintemplate.cpp  formplugintemplate.h  wizard.json
wizards/importexport/: exportformplugintemplate.cpp  exportformplugintemplate.h  importexportplugintemplate.cpp  importformplugintemplate.ui  wizard.json
wizards/importexportplugin/: exportformplugintemplate.ui  importexportplugintemplate.cpp  importexportplugintemplate.h  importexportplugintemplate.pro  importformplugintemplate.cpp  importformplugintemplate.h  wizard.json
wizards/operator/: formplugintemplate.cpp  operatorplugintemplate.h  wizard.json
wizards/operatorplugin/: formplugintemplate.cpp  operatorplugintemplate.cpp  operatorplugintemplate.h  operatorplugintemplate.pro  operatorplugintemplate.ui  wizard.json
(+597 files in other folders)
