set(CXX_STANDARD 20)
set(BUILD_SHARED_LIBS ON)
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTORCC ON)
set(CMAKE_AUTOUIC ON)

if (LINUX)
    if (CMAKE_CXX_COMPILER_VERSION VERSION_GREATER_EQUAL 5)
        SET(CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} -fno-sized-deallocation")
    endif()
    add_link_options("LINKER:--disable-new-dtags")
endif()

include(FindPCAP)
find_package(Qt5Core CONFIG REQUIRED)
find_package(Qt5Widgets CONFIG REQUIRED)
find_package(Qt5Network CONFIG REQUIRED)
find_package(FFTW REQUIRED)
find_package(PCAP REQUIRED)

add_subdirectory(hobbits-core)
add_subdirectory(hobbits-widgets)
add_subdirectory(hobbits-python)
add_subdirectory(hobbits-gui)
add_subdirectory(hobbits-runner)
add_subdirectory(hobbits-plugins)

pass_through_cpack_vars()
